Доработал отправку форм и маску для номера телефона

--- a/src/gardener/Views/ListView/FormAppBuyPage.xaml
+++ b/src/gardener/Views/ListView/FormAppBuyPage.xaml
@@ -16,7 +16,11 @@
                     <gardener:ExtendedEntry x:Name="Name" FontSize="Large" TextColor="#9e4819" Text="{Binding Name, Mode=TwoWay}"
                                    Placeholder="Имя" PlaceholderColor="#7a7a7a" />
                     <gardener:ExtendedEntry x:Name="PhoneNumber" FontSize="Large" TextColor="#9e4819" Text="{Binding PhoneNumber, Mode=TwoWay}"
-                                   Placeholder="Телефон" PlaceholderColor="#7a7a7a" />
+                                   Placeholder="Телефон" PlaceholderColor="#7a7a7a" Keyboard="Numeric">
+                        <gardener:ExtendedEntry.Behaviors>
+                            <gardener:MaskedBehavior Mask="+X (XXX) XXX-XX-XX" />
+                        </gardener:ExtendedEntry.Behaviors>
+                    </gardener:ExtendedEntry>
                 </StackLayout>
                 <Button Text="Отправить заявку" FontSize="Medium" BorderWidth="1" Margin="5" BorderColor="#f68b1f"
                         HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HeightRequest="60"
