--- a/src/gardener/Views/ListView/FormAppBuyPage.xaml
+++ b/src/gardener/Views/ListView/FormAppBuyPage.xaml
@@ -7,15 +7,19 @@
              Title="{Binding Title}">
     <ContentPage.Content>
         <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-            <ActivityIndicator Color="#7a7a7a" VerticalOptions="Center" HorizontalOptions="Center" IsRunning="{Binding IsBusy}"/>
+            <ActivityIndicator Color="#7a7a7a" VerticalOptions="Center" HorizontalOptions="Center"
+                               IsRunning="{Binding IsBusy}" />
             <StackLayout>
                 <StackLayout Margin="30,10,30,10" WidthRequest="300">
                     <gardener:ExtendedEntry x:Name="PlaceNumber" FontSize="Large" TextColor="#9e4819"
-                                            Placeholder="Место" PlaceholderColor="#7a7a7a" Text="{Binding PlaceNumber, Mode=TwoWay}"/>
-                    <gardener:ExtendedEntry x:Name="Name" FontSize="Large" TextColor="#9e4819" Text="{Binding Name, Mode=TwoWay}"
-                                   Placeholder="Имя" PlaceholderColor="#7a7a7a" />
-                    <gardener:ExtendedEntry x:Name="PhoneNumber" FontSize="Large" TextColor="#9e4819" Text="{Binding PhoneNumber, Mode=TwoWay}"
-                                   Placeholder="Телефон" PlaceholderColor="#7a7a7a" Keyboard="Numeric">
+                                            Placeholder="Место" PlaceholderColor="#7a7a7a"
+                                            Text="{Binding PlaceNumber, Mode=TwoWay}" />
+                    <gardener:ExtendedEntry x:Name="Name" FontSize="Large" TextColor="#9e4819"
+                                            Text="{Binding Name, Mode=TwoWay}"
+                                            Placeholder="Имя" PlaceholderColor="#7a7a7a" />
+                    <gardener:ExtendedEntry x:Name="PhoneNumber" FontSize="Large" TextColor="#9e4819"
+                                            Text="{Binding PhoneNumber, Mode=TwoWay}"
+                                            Placeholder="Телефон" PlaceholderColor="#7a7a7a" Keyboard="Numeric">
                         <gardener:ExtendedEntry.Behaviors>
                             <gardener:MaskedBehavior Mask="+X (XXX) XXX-XX-XX" />
                         </gardener:ExtendedEntry.Behaviors>
@@ -23,8 +27,8 @@
                 </StackLayout>
                 <Button Text="Отправить заявку" FontSize="Medium" BorderWidth="1" Margin="5" BorderColor="#f68b1f"
                         HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HeightRequest="60"
-                        WidthRequest="250" BackgroundColor="Transparent" CornerRadius="15" Command="{Binding SendFormCommand}">
-                </Button>
+                        WidthRequest="250" BackgroundColor="Transparent" CornerRadius="15"
+                        Command="{Binding SendFormCommand}" />
             </StackLayout>
         </Grid>
     </ContentPage.Content>
