--- a/src/gardener/Views/ListView/ListSalePage.xaml
+++ b/src/gardener/Views/ListView/ListSalePage.xaml
@@ -6,23 +6,26 @@
              Title="Выбор действия">
     <ContentPage.Resources>
         <Style x:Key="ButtonStyle" TargetType="Button">
-            <Setter Property="FontSize" Value="Medium"/>
-            <Setter Property="BorderWidth" Value="1"/>
-            <Setter Property="Margin" Value="5"/>
-            <Setter Property="BorderColor" Value="#f68b1f"/>
-            <Setter Property="HorizontalOptions" Value="CenterAndExpand"/>
-            <Setter Property="VerticalOptions" Value="Center"/>
-            <Setter Property="CornerRadius" Value="15"/>
-            <Setter Property="WidthRequest" Value="250"/>
-            <Setter Property="BackgroundColor" Value="Transparent"/>
-            <Setter Property="Padding" Value="10"/>
+            <Setter Property="FontSize" Value="Medium" />
+            <Setter Property="BorderWidth" Value="1" />
+            <Setter Property="Margin" Value="5" />
+            <Setter Property="BorderColor" Value="#f68b1f" />
+            <Setter Property="HorizontalOptions" Value="CenterAndExpand" />
+            <Setter Property="VerticalOptions" Value="Center" />
+            <Setter Property="CornerRadius" Value="15" />
+            <Setter Property="WidthRequest" Value="250" />
+            <Setter Property="BackgroundColor" Value="Transparent" />
+            <Setter Property="Padding" Value="10" />
         </Style>
     </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-            <Button Text="Список свободных помещений" Style="{StaticResource ButtonStyle}" Command="{Binding OpenPageCommand}" x:Name="RentButton" />
-            <Button Text="Заявка на аренду помещения" Style="{StaticResource ButtonStyle}" Command="{Binding OpenPageCommand}" x:Name="SellButton" />
-            <Button Text="Заявка на сдачу в аренду помещения" Style="{StaticResource ButtonStyle}" Command="{Binding OpenPageCommand}" x:Name="BuyButton" />
+            <Button Text="Список свободных помещений" Style="{StaticResource ButtonStyle}"
+                    Command="{Binding OpenPageCommand}" x:Name="RentButton" />
+            <Button Text="Заявка на аренду помещения" Style="{StaticResource ButtonStyle}"
+                    Command="{Binding OpenPageCommand}" x:Name="SellButton" />
+            <Button Text="Заявка на сдачу в аренду помещения" Style="{StaticResource ButtonStyle}"
+                    Command="{Binding OpenPageCommand}" x:Name="BuyButton" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
