--- a/src/gardener/Views/MainPage.xaml
+++ b/src/gardener/Views/MainPage.xaml
@@ -3,8 +3,7 @@
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
                   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                   xmlns:views="clr-namespace:gardener.Views"
-                  x:Class="gardener.Views.MainPage"
-                  >
+                  x:Class="gardener.Views.MainPage">
 
     <MasterDetailPage.Master>
         <views:MenuPage />
