--- a/src/gardener/Views/RentSalePage.xaml
+++ b/src/gardener/Views/RentSalePage.xaml
@@ -1,4 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:blocksViews="clr-namespace:gardener.Views.BlocksViews"
@@ -7,7 +8,8 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout>
-                <ListView ItemsSource="{Binding Blocks}" RowHeight="100" SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
+                <ListView ItemsSource="{Binding Blocks}" RowHeight="100"
+                          SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <blocksViews:BlockViewCell />
