--- a/src/gardener/Views/SalePage.xaml
+++ b/src/gardener/Views/SalePage.xaml
@@ -4,8 +4,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="gardener.Views.SalePage">
     <ContentPage.Content>
-        <StackLayout>
-            
-        </StackLayout>
+        <StackLayout />
     </ContentPage.Content>
 </ContentPage>
