--- a/src/gardener/Views/ListView/NewsPage.xaml
+++ b/src/gardener/Views/ListView/NewsPage.xaml
@@ -8,14 +8,18 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout>
-                <ListView ItemsSource="{Binding News}" RowHeight="100"
+                <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                    <ActivityIndicator Color="#7a7a7a" VerticalOptions="Center" HorizontalOptions="Center"
+                                       IsRunning="{Binding IsBusy}" />
+                    <ListView ItemsSource="{Binding News}" RowHeight="100"
                           SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <blocksViews:NewsViewCell />
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <blocksViews:NewsViewCell />
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Grid>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
