--- a/src/gardener/Views/NewsDetailPage.xaml
+++ b/src/gardener/Views/NewsDetailPage.xaml
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="gardener.Views.NewsDetailPage">
+             x:Class="gardener.Views.NewsDetailPage"
+             Title="{Binding Title}">
     <ContentPage.Content>
-        <ScrollView VerticalOptions="FillAndExpand">
+        <ScrollView>
             <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand">
             <Label
                 x:Name="Label"
@@ -11,7 +12,7 @@
                 FontSize="Large"
                 VerticalOptions="Start" Margin="10"/>
                 <Image Source="{Binding Image}" x:Name="Image"/>
-                <StackLayout x:Name="WebContent" VerticalOptions="FillAndExpand" MinimumHeightRequest="60"/>
+                <StackLayout x:Name="WebContent" HeightRequest="1000"/>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
